# minimal-uv-project-template

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yml
docs/template/: vscode-debug-setup.md
hooks/: post_gen_project.py  pre_gen_project.py  template_contract.py  validate_template.py
plans/: PLAN_CC_PR2.md  PLAN_COOKIECUTTER.md  PLAN_MONOREPO _v1.md  PLAN_MONOREPO.md  PLAN_MONOREPO_v2.md
scripts/: vscode_launch.sh
scripts/uvx/: duckdb  huggingface-dataset  llm  marimo  marimo-edit
scripts/uvx/wip/: duckdb  harlequin  textual
src/: app.py
src/my_project/: app.py  sql.py
src/my_project/examples/: rich.py
tests/my_project/: test_app.py  test_env.py  test_log.py
tests/template/: test_cookiecutter_template.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_slug}}/src/{{cookiecutter.app_package}}/: app.py
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_slug}}/tests/: test_app.py
{{cookiecutter.project_slug}}/docs/template/: vscode-debug-setup.md
{{cookiecutter.project_slug}}/scripts/: vscode_launch.sh
{{cookiecutter.project_slug}}/scripts/uvx/: llm  marimo-new
{{cookiecutter.project_slug}}/scripts/uvx/wip/: textual
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: app.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.package_name}}/: test_app.py  test_env.py  test_log.py
