[project]
name = "my-project"
version = "0.1.0"
description = "My project description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[project.scripts]
app = "my_project.app:app"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # import sorting (isort-compatible)
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"  # ["off", "basic", "standard", "strict"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=my_project --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["my_project"]
relative_files = true

[tool.coverage.paths]
source = ["src/my_project"]

[tool.coverage.report]
fail_under = 80
precision = 1
skip_covered = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except NotImplementedError:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.uv]
package = true
