[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[project.scripts]
app = "{{cookiecutter.package_name}}.app:app"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # import sorting (isort-compatible)
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"  # ["off", "basic", "standard", "strict"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov={{cookiecutter.package_name}} --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}"]
relative_files = true

[tool.coverage.paths]
source = ["src/{{cookiecutter.package_name}}"]

[tool.coverage.report]
fail_under = 80
precision = 1
skip_covered = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except NotImplementedError:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.uv]
package = true
