[project]
name = "{{cookiecutter.project_slug}}-workspace"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # import sorting (isort-compatible)
]

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.app_package}}", "{{cookiecutter.lib_package}}"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["apps", "packages"]
exclude = ["**/__pycache__"]
extraPaths = [
    "apps/{{cookiecutter.app_slug}}/src",
    "packages/{{cookiecutter.lib_slug}}/src",
]
typeCheckingMode = "strict" # ["off", "basic", "standard", "strict"]

[tool.pytest.ini_options]
testpaths = [
    "apps/{{cookiecutter.app_slug}}/tests",
    "packages/{{cookiecutter.lib_slug}}/tests",
]
pythonpath = [
    "apps/{{cookiecutter.app_slug}}/src",
    "packages/{{cookiecutter.lib_slug}}/src",
]
addopts = "--cov={{cookiecutter.app_package}} --cov={{cookiecutter.lib_package}} --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.app_package}}", "{{cookiecutter.lib_package}}"]
relative_files = true

[tool.coverage.paths]
source = [
    "apps/{{cookiecutter.app_slug}}/src/{{cookiecutter.app_package}}",
    "packages/{{cookiecutter.lib_slug}}/src/{{cookiecutter.lib_package}}",
]

[tool.coverage.report]
fail_under = 80
precision = 1
skip_covered = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except NotImplementedError:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "packages/*"]
